@@ -1,3 +1,12 @@
+2002-12-28  Seth Nickell  <snickell@stanford.edu>
+
+	* Makefile.am:
+	* gnome-theme-info.c: (gnome_theme_info_init):
+
+	Update icon theme directory code so it looks in
+	PREFIX/share/icons rather than PREFIX/share/theme,
+	as per freedesktop icon spec.
+
 2002-12-18  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.5
